Fix overflow on superbig screens and broken reference

--- a/_sass/two_image_slider.scss
+++ b/_sass/two_image_slider.scss
@@ -1,6 +1,5 @@
 $slider-max-width: 1123px;
 $slider-height: 50vw;
-$slider-max-height: 750px;
 
 .slider__container {
     height: $slider-height;
